hambuger overflow fix

--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,7 @@ footer div ul li {
     left: 0;
     top: 64px;
     height: fit-content;
-    width: 100vw;
+    width: 100%;
     align-content: center;
 }
 
